<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/preferencesMap">

    <androidx.preference.SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="showRegionsOnMap"
        app:summary="@string/preferencesShowWaypointsOnMapSummary"
        app:title="@string/preferencesShowWaypointsOnMap" />

    <androidx.preference.SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="enableMapRotation"
        app:summary="@string/preferencesEnableMapRotationSummary"
        app:title="@string/preferencesEnableMapRotation" />

    <androidx.preference.SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="hideStaleContacts"
        app:summary="@string/preferencesHideStaleContactsSummary"
        app:title="@string/preferencesHideStaleContacts" />

    <org.owntracks.android.support.widgets.EditIntegerPreference
        android:digits="0123456789"
        android:inputType="number"
        app:dependency="hideStaleContacts"
        app:dialogMessage="@string/preferencesStaleContactThresholdDaysDialog"
        app:iconSpaceReserved="false"
        app:key="staleContactThresholdDays"
        app:summary="@string/preferencesStaleContactThresholdDaysSummary"
        app:title="@string/preferencesStaleContactThresholdDays" />

</PreferenceScreen>
