<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/preferencesReporting">
    <androidx.preference.SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="extendedData"
        app:summary="@string/preferencesPubExtendedDataSummary"
        app:title="@string/preferencesPubExtendedData" />
    <androidx.preference.SwitchPreferenceCompat
        app:dependency="extendedData"
        app:iconSpaceReserved="false"
        app:key="publishMotionActivities"
        app:summary="@string/preferencesPublishMotionActivitiesSummary"
        app:title="@string/preferencesPublishMotionActivities" />
    <androidx.preference.SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="publishLocationOnConnect"
        app:summary="@string/preferencesRepublishOnReconnectSummary"
        app:title="@string/preferencesRepublishOnReconnect" />
</PreferenceScreen>
